Refactor Valhalla demo: package, Gradle build, removed scripts
Package refactoring:
- Moved VectorAPIDemo.java → com.skowronski.talk.jvmai
- Moved FP16VectorDemo.java → com.skowronski.talk.jvmai
- Added package declarations to both files
- Proper source directory structure

Build configuration (new build.gradle.kts):
- Added to Gradle multi-project build
- Configures Vector API incubator module
- Three tasks: run, runVectorAPI, runFP16

Removed:
- run-vector-api.sh script (replaced by Gradle task)
- run-fp16-vector.sh script (replaced by Gradle task)
- *.class files (build artifacts)

Tasks created:
- ./gradlew :demos:valhalla:run (Vector API FP32, default)
- ./gradlew :demos:valhalla:runVectorAPI (Vector API FP32, explicit)
- ./gradlew :demos:valhalla:runFP16 (Float16 value type)

Documentation:
- Updated README.md (usage guide with expected outputs)
- FINDINGS.md already exists (comprehensive Float16/Vector API research)

GitHub Action (.github/workflows/valhalla.yml):
- Two jobs: Vector API (FP32) and FP16
- Tests both demos on JDK 25
- Validates SIMD operations

Changes to settings.gradle.kts:
- Added :demos:valhalla to project

Benefits:
- Consistent package across all demos
- Gradle integration (no manual scripts)
- CI validation
- Cleaner repository (no .class files, no scripts)

Co-Authored-By: Claude Sonnet 4.5 (1M context) <noreply@anthropic.com>